test/good/sets/range05.px

func f(s: {String} = {'x'..'z', 'X'..'Z'}): Void def
    print s.pop().length

f()
