test/bad/functions/name02.px

func f(x: String): Void def
    skip

f, f = f, f
